# h_ws

./: .gitignore
src/hyperdog-ros2/robots/configs/hyperdog_config/: CMakeLists.txt  package.xml
src/hyperdog-ros2/robots/configs/hyperdog_config/config/gait/: gait.yaml
src/hyperdog-ros2/robots/configs/hyperdog_config/config/joints/: joints.yaml
src/hyperdog-ros2/robots/configs/hyperdog_config/config/links/: links.yaml
src/hyperdog-ros2/robots/configs/hyperdog_config/config/ros_control/: ros_control.yaml
src/hyperdog-ros2/robots/configs/hyperdog_config/include/: gait_config.h  quadruped_description.h
src/hyperdog-ros2/robots/configs/hyperdog_config/launch/: bringup.launch.py  gazebo.launch.py
src/hyperdog-ros2/robots/descriptions/hyperdog_description/: CMakeLists.txt  package.xml
src/hyperdog-ros2/robots/descriptions/hyperdog_description/config/ros_control/: ros_control.yaml
src/hyperdog-ros2/robots/descriptions/hyperdog_description/launch/: description.launch.py
src/hyperdog-ros2/robots/descriptions/hyperdog_description/xacro/: consts.xacro  gazebo.xacro  gazebo_ros2_control_plugin.xacro  hyperdog.urdf.xacro  hyperdog_gazebo.xacro  hyperdog_urdf_joints.xacro  hyperdog_urdf_links.xacro  physics.xacro
