<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hyperdog_config</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ajjaya@espol.edu.ec">andrius</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
